--- a/index.html
+++ b/index.html
@@ -3,50 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Five Star Group</title>
+    <title>Five Star Group - المدونة والمنتجات</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="container">
-            <h1>Five Star Group</h1>
-            <p>مجتمعك الأفضل لعروض المنتجات الفاخرة</p>
-            <nav>
-                <ul>
-                    <li><a href="#about">من نحن</a></li>
-                    <li><a href="#products">أقسام المنتجات</a></li>
-                    <li><a href="#blog">المدونة</a></li>
-                    <li><a href="#contact">تواصل معنا</a></li>
-                </ul>
-            </nav>
-            <a href="https://wa.me/yourwhatsappnumber" class="join-btn">انضم إلى واتساب</a>
-        </div>
+        <h1>أهلاً بكم في Five Star Group</h1>
+        <p>مدونتنا تقدم أفضل النصائح حول اختيار المنتجات الذكية.</p>
     </header>
-
-    <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2>من نحن</h2>
-            <p>Five Star Group نحن فريق بسيط برؤية كبيرة، نسعى من خلاله إلى توفير أفضل المنتجات والخدمات التسويقية بلمسة خمس نجوم، مع التركيز على الأصالة والتميز في العرض.
-نسعى لنكون خيارك الأول للمنتجات الأكثر موثوقية.
-.</p>
-        </div>
-    </section>
-
-    <!-- Products Section -->
-    <section id="products" class="products">
-        <div class="container">
-            <h2>أقسام المنتجات</h2>
-            <div class="product-categories">
-                <a href="https://wa.me/yourwhatsappnumber1">الإلكترونيات</a>
-              <a href="https://wa.me/yourwhatsappnumber1">العناية والجمال</a>
- <a href="https://wa.me/yourwhatsappnumber1">الملابس</a>
-                <a href="https://wa.me/yourwhatsappnumber2">الموضة</a>
-                <a href="https://wa.me/yourwhatsappnumber3">الأدوات المنزلية</a>
-            </div>
-        </div>
-    </section>
 
     <!-- Blog Section -->
     <section id="blog" class="blog">
@@ -56,13 +21,42 @@
                 <article>
                     <h3>كيفية اختيار المنتجات المثالية</h3>
                     <p>دليلك الشامل لاختيار أفضل المنتجات في السوق الخليجية.</p>
-                    <a href="#"deep.html</a>
+                    <a href="article1.html" class="read-more">اقرأ المزيد</a>
                 </article>
                 <article>
                     <h3>نصائح للتسوق الذكي</h3>
                     <p>احصل على أفضل الصفقات وأوفر الأسعار بكل سهولة.</p>
-                    <a href="#">اقرأ المزيد</a>
+                    <a href="smart_shopping.html" class="read-more">اقرأ المزيد</a>
                 </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section id="products" class="products">
+        <div class="container">
+            <h2>المنتجات</h2>
+            <div class="product-cards">
+                <div class="card">
+                    <h3>الإلكترونيات</h3>
+                    <p>اكتشف أحدث الأجهزة الإلكترونية المميزة في السوق.</p>
+                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
+                </div>
+                <div class="card">
+                    <h3>الملابس والموضة</h3>
+                    <p>استعرض أجمل الأزياء والملابس العصرية.</p>
+                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
+                </div>
+                <div class="card">
+                    <h3>العناية والجمال</h3>
+                    <p>منتجات العناية والجمال المفضلة لدى الجميع.</p>
+                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
+                </div>
+                <div class="card">
+                    <h3>منتجات مميزة</h3>
+                    <p>أفضل المنتجات المختارة بعناية للحصول على تجربة مميزة.</p>
+                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
+                </div>
             </div>
         </div>
     </section>
@@ -71,9 +65,8 @@
     <footer class="footer">
         <div class="container">
             <div class="social-media">
-                <a href="https://wa.me/yourwhatsappnumber" class="whatsapp">واتساب</a>
-                <a href="https://t.me/yourtelegram" class="telegram">تليجرام</a>
-                <a href="https://instagram.com/yourinstagram" class="instagram">إنستغرام</a>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="whatsapp">انضم إلينا على واتساب</a>
+                <a href="https://instagram.com/5_star101" class="instagram">تابعنا على إنستغرام</a>
             </div>
             <p>&copy; 2024 Five Star Group. جميع الحقوق محفوظة.</p>
         </div>
