--- a/index.html
+++ b/index.html
@@ -3,73 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Five Star Group - المدونة والمنتجات</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Five Star Group - التسوق الذكي</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <h1>أهلاً بكم في Five Star Group</h1>
-        <p>مدونتنا تقدم أفضل النصائح حول اختيار المنتجات الذكية.</p>
-    </header>
 
-    <!-- Blog Section -->
-    <section id="blog" class="blog">
-        <div class="container">
-            <h2>المدونة</h2>
-            <div class="blog-posts">
-                <article>
-                    <h3>كيفية اختيار المنتجات المثالية</h3>
-                    <p>دليلك الشامل لاختيار أفضل المنتجات في السوق الخليجية.</p>
-                    <a href="article1.html" class="read-more">اقرأ المزيد</a>
-                </article>
-                <article>
-                    <h3>نصائح للتسوق الذكي</h3>
-                    <p>احصل على أفضل الصفقات وأوفر الأسعار بكل سهولة.</p>
-                    <a href="smart_shopping.html" class="read-more">اقرأ المزيد</a>
-                </article>
+<!-- رأس الصفحة -->
+<header class="header">
+    <div class="container">
+        <h1>مرحبا بك في Five Star Group</h1>
+        <p>دليلك الشامل للحصول على أفضل المنتجات والنصائح.</p>
+    </div>
+</header>
+
+<!-- قسم المنتجات -->
+<section id="products" class="products-section">
+    <div class="container">
+        <h2>المنتجات</h2>
+        <div class="product-cards">
+            <div class="card">
+                <h3>الإلكترونيات</h3>
+                <p>أحدث الأجهزة التقنية والأدوات الإلكترونية.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            </div>
+            <div class="card">
+                <h3>الملابس</h3>
+                <p>تشكيلة مميزة من الملابس لجميع الفئات.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            </div>
+            <div class="card">
+                <h3>الموضة</h3>
+                <p>اكتشف أحدث صيحات الموضة والإكسسوارات.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            </div>
+            <div class="card">
+                <h3>العناية والجمال</h3>
+                <p>منتجات مميزة للعناية بالبشرة والجمال.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Products Section -->
-    <section id="products" class="products">
-        <div class="container">
-            <h2>المنتجات</h2>
-            <div class="product-cards">
-                <div class="card">
-                    <h3>الإلكترونيات</h3>
-                    <p>اكتشف أحدث الأجهزة الإلكترونية المميزة في السوق.</p>
-                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
-                </div>
-                <div class="card">
-                    <h3>الملابس والموضة</h3>
-                    <p>استعرض أجمل الأزياء والملابس العصرية.</p>
-                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
-                </div>
-                <div class="card">
-                    <h3>العناية والجمال</h3>
-                    <p>منتجات العناية والجمال المفضلة لدى الجميع.</p>
-                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
-                </div>
-                <div class="card">
-                    <h3>منتجات مميزة</h3>
-                    <p>أفضل المنتجات المختارة بعناية للحصول على تجربة مميزة.</p>
-                    <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="join-community">انضم إلى المجتمع</a>
-                </div>
-            </div>
+<!-- قسم المدونة -->
+<section id="blog" class="blog-section">
+    <div class="container">
+        <h2>المدونة</h2>
+        <div class="blog-posts">
+            <article>
+                <h3><a href="smart-shopping.html">نصائح للتسوق الذكي</a></h3>
+                <p>احصل على أفضل الصفقات وأوفر الأسعار بكل سهولة.</p>
+                <a href="smart-shopping.html">اقرأ المزيد</a>
+            </article>
+            <article>
+                <h3><a href="product-selection.html">كيفية اختيار منتجك المثالي</a></h3>
+                <p>دليلك الشامل لاختيار أفضل المنتجات في السوق الخليجية.</p>
+                <a href="product-selection.html">اقرأ المزيد</a>
+            </article>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="social-media">
-                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="whatsapp">انضم إلينا على واتساب</a>
-                <a href="https://instagram.com/5_star101" class="instagram">تابعنا على إنستغرام</a>
-            </div>
-            <p>&copy; 2024 Five Star Group. جميع الحقوق محفوظة.</p>
+<!-- الفوتر -->
+<footer class="footer">
+    <div class="container">
+        <div class="social-media">
+            <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="whatsapp">واتساب</a>
+            <a href="https://t.me/5_star101" class="telegram">تليجرام</a>
+            <a href="https://instagram.com/5_star101" class="instagram">إنستغرام</a>
         </div>
-    </footer>
+        <p>&copy; 2024 Five Star Group. جميع الحقوق محفوظة.</p>
+    </div>
+</footer>
+
 </body>
 </html>
