--- a/index.html
+++ b/index.html
@@ -1,80 +1,78 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Five Star Group - التسوق الذكي</title>
+    <title>Five Star Group - موقع التسوق</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- رأس الصفحة -->
+    <header class="header">
+        <h1>⭐ Five Star Group</h1>
+        <p>نوفر أفضل وأقوى المنتجات من مواقع عديدة مثل أمازون وعلي إكسبريس</p>
+        <nav>
+            <a href="index.html">الرئيسية</a>
+            <a href="#products">المنتجات</a>
+            <a href="smart-shopping.html">التسوق الذكي</a>
+            <a href="product-tips.html">كيفية اختيار منتجك</a>
+            <a href="#blog">المدونة</a>
+            <a href="contact.html">تواصل معنا</a>
+        </nav>
+    </header>
 
-<!-- رأس الصفحة -->
-<header class="header">
-    <div class="container">
-        <h1>مرحبا بك في Five Star Group</h1>
-        <p>دليلك الشامل للحصول على أفضل المنتجات والنصائح.</p>
-    </div>
-</header>
-
-<!-- قسم المنتجات -->
-<section id="products" class="products-section">
-    <div class="container">
+    <!-- قسم المنتجات -->
+    <section id="products" class="products">
         <h2>المنتجات</h2>
         <div class="product-cards">
-            <div class="card">
-                <h3>الإلكترونيات</h3>
-                <p>أحدث الأجهزة التقنية والأدوات الإلكترونية.</p>
-                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            <div class="product-card">
+                <h3>📱 الإلكترونيات</h3>
+                <p>أحدث الأجهزة الإلكترونية من أفضل الماركات العالمية.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4">انضم لمجتمع الإلكترونيات</a>
             </div>
-            <div class="card">
-                <h3>الملابس</h3>
-                <p>تشكيلة مميزة من الملابس لجميع الفئات.</p>
-                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            <div class="product-card">
+                <h3>👗 الملابس</h3>
+                <p>أجمل الأزياء وأحدث صيحات الموضة.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4">انضم لمجتمع الملابس</a>
             </div>
-            <div class="card">
-                <h3>الموضة</h3>
-                <p>اكتشف أحدث صيحات الموضة والإكسسوارات.</p>
-                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            <div class="product-card">
+                <h3>💄 العناية والجمال</h3>
+                <p>أفضل منتجات العناية بالبشرة والجمال.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4">انضم لمجتمع العناية والجمال</a>
             </div>
-            <div class="card">
-                <h3>العناية والجمال</h3>
-                <p>منتجات مميزة للعناية بالبشرة والجمال.</p>
-                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="community-link">انضم للمجتمع</a>
+            <div class="product-card">
+                <h3>🌟 منتجات مميزة</h3>
+                <p>عروض وخصومات على منتجات مختارة.</p>
+                <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4">انضم لمجتمع المنتجات المميزة</a>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- قسم المدونة -->
-<section id="blog" class="blog-section">
-    <div class="container">
+    <!-- قسم المدونة -->
+    <section id="blog" class="blog">
         <h2>المدونة</h2>
         <div class="blog-posts">
             <article>
-                <h3><a href="smart-shopping.html">نصائح للتسوق الذكي</a></h3>
+                <h3>كيفية اختيار المنتجات المثالية</h3>
+                <p>دليلك الشامل لاختيار أفضل المنتجات في الأسوق .</p>
+                <a href="product-tips.html">اقرأ المزيد</a>
+            </article>
+            <article>
+                <h3>نصائح للتسوق الذكي</h3>
                 <p>احصل على أفضل الصفقات وأوفر الأسعار بكل سهولة.</p>
                 <a href="smart-shopping.html">اقرأ المزيد</a>
             </article>
-            <article>
-                <h3><a href="product-selection.html">كيفية اختيار منتجك المثالي</a></h3>
-                <p>دليلك الشامل لاختيار أفضل المنتجات في السوق الخليجية.</p>
-                <a href="product-selection.html">اقرأ المزيد</a>
-            </article>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- الفوتر -->
-<footer class="footer">
-    <div class="container">
+    <!-- تواصل معنا -->
+    <footer class="footer">
         <div class="social-media">
-            <a href="https://chat.whatsapp.com/CfYyr6nraCsFQP8nXzmpM4" class="whatsapp">واتساب</a>
-            <a href="https://t.me/5_star101" class="telegram">تليجرام</a>
-            <a href="https://instagram.com/5_star101" class="instagram">إنستغرام</a>
+            <a href="https://wa.me/yourwhatsappnumber" class="whatsapp">🟢 واتساب</a>
+            <a href="https://t.me/5_star101" class="telegram">🔵 تليجرام</a>
+            <a href="https://instagram.com/5_star101" class="instagram">🟣 إنستغرام</a>
         </div>
         <p>&copy; 2024 Five Star Group. جميع الحقوق محفوظة.</p>
-    </div>
-</footer>
-
+    </footer>
 </body>
 </html>
